removing NaN values

--- a/notebooks/data_prep.ipynb
+++ b/notebooks/data_prep.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1100,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1257,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1521,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1552,7 +1552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1614,7 +1614,7 @@
        "      <td>nan</td>\n",
        "      <td>greenfield</td>\n",
        "      <td>ende</td>\n",
-       "      <td>yrqfe4</td>\n",
+       "      <td>fggvax</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -1634,7 +1634,7 @@
        "      <td>nan</td>\n",
        "      <td>greenfield</td>\n",
        "      <td>ende</td>\n",
-       "      <td>zcera8</td>\n",
+       "      <td>vzfxiu</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -1654,7 +1654,7 @@
        "      <td>nan</td>\n",
        "      <td>greenfield</td>\n",
        "      <td>hidroelectrica_boliviana</td>\n",
-       "      <td>q72ypq</td>\n",
+       "      <td>qoh83p</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1674,7 +1674,7 @@
        "      <td>nan</td>\n",
        "      <td>greenfield</td>\n",
        "      <td>ende</td>\n",
-       "      <td>j5culn</td>\n",
+       "      <td>czigac</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -1694,7 +1694,7 @@
        "      <td>nan</td>\n",
        "      <td>greenfield</td>\n",
        "      <td>ende</td>\n",
-       "      <td>f4rh3c</td>\n",
+       "      <td>oxsccr</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -1714,7 +1714,7 @@
        "      <td>nan</td>\n",
        "      <td>greenfield</td>\n",
        "      <td>ende</td>\n",
-       "      <td>tdzmhx</td>\n",
+       "      <td>7h6k1r</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -1734,7 +1734,7 @@
        "      <td>nan</td>\n",
        "      <td>greenfield</td>\n",
        "      <td>ende</td>\n",
-       "      <td>sqqjkd</td>\n",
+       "      <td>h1ao9s</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -1754,7 +1754,7 @@
        "      <td>nan</td>\n",
        "      <td>greenfield</td>\n",
        "      <td>ende</td>\n",
-       "      <td>kd3nhv</td>\n",
+       "      <td>lpkt6z</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -1774,7 +1774,7 @@
        "      <td>nan</td>\n",
        "      <td>greenfield</td>\n",
        "      <td>ende</td>\n",
-       "      <td>bxz20c</td>\n",
+       "      <td>tgbkrv</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1794,7 +1794,7 @@
        "      <td>nan</td>\n",
        "      <td>greenfield</td>\n",
        "      <td>ende</td>\n",
-       "      <td>it80of</td>\n",
+       "      <td>2kmyw2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -1862,19 +1862,19 @@
        "9                                                nan        nan  greenfield   \n",
        "\n",
        "                 parent_org     pid  \n",
-       "0                      ende  yrqfe4  \n",
-       "1                      ende  zcera8  \n",
-       "2  hidroelectrica_boliviana  q72ypq  \n",
-       "3                      ende  j5culn  \n",
-       "4                      ende  f4rh3c  \n",
-       "5                      ende  tdzmhx  \n",
-       "6                      ende  sqqjkd  \n",
-       "7                      ende  kd3nhv  \n",
-       "8                      ende  bxz20c  \n",
-       "9                      ende  it80of  "
+       "0                      ende  fggvax  \n",
+       "1                      ende  vzfxiu  \n",
+       "2  hidroelectrica_boliviana  qoh83p  \n",
+       "3                      ende  czigac  \n",
+       "4                      ende  oxsccr  \n",
+       "5                      ende  7h6k1r  \n",
+       "6                      ende  h1ao9s  \n",
+       "7                      ende  lpkt6z  \n",
+       "8                      ende  tgbkrv  \n",
+       "9                      ende  2kmyw2  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1892,7 +1892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1909,7 +1909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1935,7 +1935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1950,7 +1950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2029,7 +2029,7 @@
        "4           anto_ruiz -13.88330  -70.20000  hydropower"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2046,7 +2046,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2057,7 +2057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -2149,13 +2149,67 @@
        "4  POINT (-70.20000 -13.88330)  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "geo_coords.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(138, 5)\n",
+      "(554, 5)\n",
+      "(554, 17)\n",
+      "(416,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Check for nan values\n",
+    "nan_rows = geo_coords[(geo_coords['project_name'].isna()) | (geo_coords['project_name'] == \"nan\")]\n",
+    "print(nan_rows.shape)\n",
+    "print(geo_coords.shape)\n",
+    "print(df.shape)\n",
+    "print(df['project_name'].unique().shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "__Note:__ The number of non-empty values in `geo_coords` is equal to the number of unique project names in `df`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(416, 5)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Remove NaN values\n",
+    "geo_coords = geo_coords.drop(nan_rows.index)\n",
+    "geo_coords.shape"
    ]
   },
   {
@@ -2167,7 +2221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2178,7 +2232,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "amazon_energy",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2193,8 +2247,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.10.8"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
